--- a/SongsApi/appsettings.Development.json
+++ b/SongsApi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "connectionStrings": {
+    "songs": "server=.\\sqlexpress;database=songs_dev;integrated security=true"
   }
 }
