--- a/SongsApi/appsettings.Development.json
+++ b/SongsApi/appsettings.Development.json
@@ -8,6 +8,6 @@
     }
   },
   "connectionStrings": {
-    "songs": "server=.\\sqlexpress;database=songs_dev;integrated security=true"
+    "songs": "server=.;database=songs_prod;user=sa;password=TokyoJoe138!"
   }
 }
